<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_help"
        android:id="@+id/textHelpTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/help_section1"
                android:id="@+id/textView1"
                style="@style/help_section_title" />

            <TextView
                android:text="@string/help_paragraph1_1"
                android:id="@+id/textView1_1"
                style="@style/help_paragraph" />
            <TextView
                android:text="@string/help_paragraph1_2"
                android:id="@+id/textView1_2"
                style="@style/help_paragraph" />
            <TextView
                android:text="@string/help_paragraph1_3"
                android:id="@+id/textView1_3"
                style="@style/help_paragraph" />
            <TextView
                android:text="@string/help_section2"
                android:id="@+id/textView2"
                style="@style/help_section_title" />

            <TextView
                android:text="@string/help_paragraph2_1"
                android:id="@+id/textView2_1"
                style="@style/help_paragraph" />
            <TextView
                android:text="@string/help_paragraph2_2"
                android:id="@+id/textView2_2"
                style="@style/help_paragraph" />
            <TextView
                android:text="@string/help_section3"
                android:id="@+id/textView3"
                style="@style/help_section_title" />

            <TextView
                android:text="@string/help_paragraph3_1"
                android:id="@+id/textView3_1"
                style="@style/help_paragraph" />
            <TextView
                android:text="@string/help_paragraph3_2"
                android:id="@+id/textView3_2"
                style="@style/help_paragraph" />
            <TextView
                android:text="@string/help_paragraph3_3"
                android:id="@+id/textView3_3"
                style="@style/help_paragraph" />
            <TextView
                android:text="@string/help_paragraph3_4"
                android:id="@+id/textView3_4"
                style="@style/help_paragraph" />

            <TextView
                android:text="@string/help_section4"
                android:id="@+id/textView4"
                style="@style/help_section_title" />

            <TextView
                android:text="@string/help_paragraph4_1"
                android:id="@+id/textView4_1"
                style="@style/help_paragraph" />
            <TextView
                android:text="@string/help_paragraph4_2"
                android:id="@+id/textView4_2"
                style="@style/help_paragraph" />
            <TextView
                android:text="@string/help_paragraph4_3"
                android:id="@+id/textView4_3"
                style="@style/help_paragraph" />

            <TextView
                android:text="@string/help_paragraph4_4"
                android:id="@+id/textView4_4"
                style="@style/help_paragraph" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>