<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playerListViewLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:padding="10dp">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filterPlayers"
        android:hint="@string/player_filter"/>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="multipleChoice"
        android:layout_below="@+id/filterPlayers"
        android:layout_above="@+id/player_listview_create"
        android:layout_marginBottom="10dp">
    </ListView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:id="@android:id/empty"
        android:indeterminate="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/noplayers"
        android:id="@+id/noplayers"
        android:textColor="#ffffffff"
        android:gravity="center"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/player_listview_create"
        android:textSize="26sp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/orangebutton"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/ok"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#FFFFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>