<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andreas.kratascore.NewGameFragment"
    android:padding="10dp"
    android:background="@android:color/holo_blue_dark"
    android:clickable="false">

        <EditText
            android:layout_centerHorizontal="true"
            android:id="@+id/gameNameText"
            android:hint="@string/game_name_desc"
            style="@style/new_game_edits"
            android:layout_alignParentStart="true" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gameNameText"
            android:id="@+id/linearMethod"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/winner_desc"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_gravity="center_vertical" />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerMethod"
                android:spinnerStyle="@android:style/Widget.Spinner.DropDown"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical" />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/greybutton"
                android:src="@drawable/users"
                android:id="@+id/btnSelectPlayer"
                android:scaleType="fitCenter"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:layout_marginLeft="5dp" />
        </LinearLayout>
        <ListView
            android:id="@+id/android:list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearMethod"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/btnCreate">
        </ListView>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:id="@android:id/empty"
            android:indeterminate="true"
            android:layout_below="@+id/linearMethod"
            android:layout_above="@+id/btnCreate" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/addplayers"
            android:text="@string/addplayers"
            android:textColor="#ffffffff"
            android:gravity="center"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/linearMethod"
            android:layout_above="@+id/btnCreate" />

    <Button
        android:textSize="26sp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/orangebutton"
        android:text="@string/game_create"
        android:id="@+id/btnCreate"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
